fixed jumpy loading of movies on load more button click on safari

--- a/src/movies/MoviesList/MoviesList.css
+++ b/src/movies/MoviesList/MoviesList.css
@@ -6,10 +6,6 @@
   align-items: center;
 }
 
-.height {
-  height: 100vh;
-}
-
 .movie-list-grid {
   display: inline-grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -19,6 +15,7 @@
   column-gap: 120px;
   margin-bottom: 2.5rem;
   overflow: auto;
+  overflow-y: auto;
 }
 
 .movie-list-item-container {
